# vocode-python

./: pyproject.toml
apps/client_backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
vocode/conversation_recorder/: base_recorder.py  conversation_recorder.py
vocode/data_store/: base_data_store.py  data_store_factory.py  redis_data_store.py
vocode/streaming/: streaming_conversation.py
vocode/streaming/agent/: chat_gpt_agent.py  utils.py
vocode/streaming/client_backend/: conversation.py  rooms.py
vocode/streaming/models/: event_log.py  events.py  transcript.py  websocket.py
vocode/streaming/output_device/: websocket_output_device.py
